# ipc-benchmark

./: CMakeLists.txt  README.md  main.cpp  requirements.txt
src/boost_shm/: boost_shm.cpp  boost_shm.h
src/common/: core.cpp  core.h
src/domain_socket/: domain_socket.cpp  domain_socket.h
src/named_pipe/: named_pipe.cpp  named_pipe.h
src/pipe/: pipe.cpp  pipe.h
tests/: test_boost_shm.cpp  test_boost_shm_2.cpp  test_boost_shm_3.cpp
